# SimpleGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
GES/: CMakeLists.txt
GES/src/: Application.cpp  Application.h  EntryPoint.hpp  Log.cpp  Test.cpp
SandBox/: CMakeLists.txt
SandBox/src/: SandBoxApp.cpp  main.cpp
include/GES/: Application.h  EntryPoint.hpp  GES.h  Log.h  Simple.h  Test.h
